--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server .",
     "build": "webpack --config webpack.prod.js",
-    "start-dev": "webpack serve --config webpack.dev.js"
+    "start-dev": "webpack serve --config webpack.dev.js",
+    "lint": "eslint ./"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,8 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
