--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,20 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-console" : "off",
+        "no-console": "off",
         "no-undef": "off",
         "class-methods-use-this": "off",
-        "no-alert":"off"
-    }
+        "no-alert": "off"
+    },
+    "overrides": [
+        {
+            "files": ["*.html"],
+            "parser": "@babel/eslint-parser",
+            "parserOptions": {
+                "ecmaVersion": 6,
+                "sourceType": "module"
+            }
+        }
+    ],
+    "ignorePatterns": ["dist/bundle.js"]
 }
